# hello

./: README.md
CoffeeGui/: Mockup1.xcf  Mockup2.xcf
CoffeeGui/CoffeeUI/: .gitignore  Cargo.toml
CoffeeGui/CoffeeUI/src/canvas/: mod.rs
CoffeeGui/coffee_gui/: .gitignore  Cargo.toml
CoffeeGui/coffee_gui/src/: main.rs
CoffeeGui/coffee_gui/src/actions/: mod.rs
CoffeeGui/coffee_gui/src/app/: dispatcher.rs  mod.rs
CoffeeGui/coffee_gui/src/app/models/: initializer.rs  mod.rs
CoffeeGui/coffee_gui/src/app/models/time/: mod.rs
CoffeeGui/coffee_gui/src/app/state/: mod.rs
CoffeeGui/coffee_gui/src/app/state/filters/: .mod.rs.swp  mod.rs
CoffeeGui/coffee_gui/src/app/state/mutators/: mod.rs
CoffeeGui/coffee_gui/src/app/state/reducers/: mod.rs
CoffeeGui/coffee_gui/src/app/time/: mod.rs
CoffeeGui/coffee_gui/src/app/views/: brew_settings.rs  info_bar.rs  mod.rs  settings.rs  time_settings.rs
CoffeeGui/coffee_gui/src/app/views/hid_button_pad/: mod.rs
CoffeeGui/coffee_gui/src/app/views/pad_input/: mod.rs
CoffeeGui/coffee_gui/src/canvas/: mod.rs
CoffeeGui/coffee_gui/src/controllers/: mod.rs
CoffeeGui/coffee_gui/src/fb/: mod.rs
CoffeeGui/coffee_gui/src/gui_tk/: mod.rs
CoffeeGui/coffee_gui/src/joy_pad/: mod.rs
CoffeeGui/coffee_gui/src/state/: mod.rs
CoffeeGui/coffee_gui/src/views/: mod.rs
CoffeeGui/gpio/gpio_read/: Cargo.toml
CoffeeGui/gpio/gpio_read/src/: main.rs
CoffeeGui/gpio/gpio_read/src/canvas/: mod.rs
CoffeeGui/gpio/gpio_read/src/fb/: mod.rs
CoffeeGui/gpio/gpio_read/src/joy_pad/: mod.rs
