[package]
name = "coffee_gui"
version = "0.1.0"
authors = ["David P. Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lovett = { git = "https://github.com/kcculhwch/lovett" }
rand = "0.7.3"
rppal = "0.11.3"
framebuffer = "0.2.0"
image = "0.23.8"
rusttype = "0.9.2"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
serde = "1.0.116"
bincode = "1.3.1"

[dev-dependencies]
serde_bytes = "0.11.5"
serde_derive = "1.0.116"
