[package]
name = "coffee_gui"
version = "0.1.0"
authors = ["David P. Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lovett = { git = "https://github.com/kcculhwch/lovett", branch = "ab_glyph_test"  }
serde = "1.0.116"
bincode = "1.3.1"
env_logger = "0.5.13"

[dev-dependencies]
serde_bytes = "0.11.5"
serde_derive = "1.0.116"

[profile.release]
debug = 2
