[package]
name = "coffee_gui"
version = "0.1.0"
authors = ["David P. Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lovett = { git = "https://github.com/kcculhwch/lovett" }
serde = "1.0.116"
bincode = "1.3.1"
env_logger = "0.5.13"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
serde_bytes = "0.11.5"
serde_derive = "1.0.116"

[profile.bench]
debug = 2
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = false
#panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
